{
    "name": "InputMap",
    "maps": [
        {
            "name": "Player",
            "id": "02bef6fc-6347-437a-b995-7922aca7fb21",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "226cfd95-581b-4680-aa54-e7a533d58e01",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "4979d7ea-0072-483b-9b10-a0e942b802a3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LUse",
                    "type": "Button",
                    "id": "ebfba83e-d071-4920-89cf-a2b96271cef1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RUse",
                    "type": "Button",
                    "id": "bbaf6658-969b-4a19-85c5-f2f3d25f99b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainFire",
                    "type": "Button",
                    "id": "728ec098-bcdd-4953-934a-9853b2f87340",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryFire",
                    "type": "Button",
                    "id": "d3afea8c-92c6-4366-937f-c18edda00563",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "63ecc838-aef9-498e-9a06-bd6440aee76a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2479a82c-30c5-4b2a-ab8c-193bf80020a5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37dd9540-8d81-4820-a421-c87427e3e77a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "31c86de5-0b6f-40ad-8121-b0746d833d9d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "abd8ebb7-6d48-4039-9d29-163ca5ec5390",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6efe6016-df3a-4c20-b900-0829e541f0ff",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "LUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a7df9ea-8bf5-4d67-8d83-20cf8713d5eb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "RUse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5188d85e-d7b4-46ab-a57b-0a5c17b26dea",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "MainFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ea47b0f-e090-439d-a918-ca0f2f86622a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "SecondaryFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a7818fc4-42d2-4ea1-89fc-111f555ae62d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "MouseAndKeyBoard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MouseAndKeyBoard",
            "bindingGroup": "MouseAndKeyBoard",
            "devices": []
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": []
        }
    ]
}